# EasyNewsletter

./: .env.example  .gitignore  README.md  main.py  plan.md  pyproject.toml  requirements.txt  run_daily.bat
.github/workflows/: ci.yml
output/: .seen.json
src/: __init__.py  aggregator.py  config.py  email_reader.py  html_parser.py  markdown_generator.py  rss_reader.py  state.py  summarizer.py
templates/: daily_digest.md.j2
tests/: __init__.py  test_aggregator.py  test_email_reader.py  test_html_parser.py  test_state.py  test_summarizer.py
